--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,10 +57,10 @@
             <p class="lead">不能让贫穷限制了我们的出行选择</p>
             <p class="lead">
               <!--<a href="#" class="btn btn-lg btn-default">开启便利</a>-->
-              <form method="post" th:action="@{/search}" target="_blank" id="searchform">
-                <input type="text" id="start_addr" class="form-control" placeholder="起点" required="" autofocus="">
-                <input type="text" id="end_addr" class="form-control" placeholder="终点" required="" autofocus="">
-                <input type="text" id="exp_time" class="form-control" placeholder="预期时间" required="" autofocus="">
+              <form method="post" th:action="@{/search}" th:object="${routeRequest}" target="_blank" id="searchform">
+                <input type="text" th:field="*{startAddress}" class="form-control" placeholder="起点" required="" autofocus="">
+                <input type="text" th:field="*{endAddress}" class="form-control" placeholder="终点" required="" autofocus="">
+                <input type="text" th:field="*{expTime}" class="form-control" placeholder="预期时间" required="" autofocus="">
                 <!--<a href=" " class="btn btn-lg btn-default">开启便利</a>-->
                 <button type="submit" id="search-submit" class="btn btn-lg btn-primary btn-block">查询</button>
               </form>
