--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <!--<link th:href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
     <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
+    <!--<link th:href="@{/bootstrap/css/bootstrap-datetimepicker.min.css}" rel="stylesheet" type="text/css"/>-->
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link th:href="@{/assets/css/ie10-viewport-bug-workaround.css}" rel="stylesheet">
@@ -57,13 +58,13 @@
             <p class="lead">不能让贫穷限制了我们的出行选择</p>
             <p class="lead">
               <!--<a href="#" class="btn btn-lg btn-default">开启便利</a>-->
-              <form method="post" th:action="@{/search}" th:object="${routeRequest}" target="_blank" id="searchform">
-                <input type="text" th:field="*{startAddress}" class="form-control" placeholder="起点" required="" autofocus="">
-                <input type="text" th:field="*{endAddress}" class="form-control" placeholder="终点" required="" autofocus="">
-                <input type="text" th:field="*{expTime}" class="form-control" placeholder="预期时间" required="" autofocus="">
-                <!--<a href=" " class="btn btn-lg btn-default">开启便利</a>-->
-                <button type="submit" id="search-submit" class="btn btn-lg btn-primary btn-block">查询</button>
-              </form>
+                  <form method="post" th:action="@{/search}" th:object="${routeRequest}" target="_blank" id="searchform">
+                    <input type="text" th:field="*{startAddress}" class="form-control" placeholder="起点" required="" autofocus="">
+                    <input type="text" th:field="*{endAddress}" class="form-control" placeholder="终点" required="" autofocus="">
+                    <input type="text" th:field="*{expTime}" class="form-control" placeholder="预期时间(分钟)" required="" autofocus="">
+                    <!--<a href=" " class="btn btn-lg btn-default">开启便利</a>-->
+                    <button type="submit" id="search-submit" class="btn btn-lg btn-primary btn-block">查询</button>
+          </form>
               </p>
           </div>
 
@@ -85,6 +86,7 @@
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script th:src="@{assets/js/jquery.min.js}"><\/script>')</script>
     <script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
+    <!--<script th:src="@{bootstrap/js/bootstrap-datetimepicker.min.js}"></script>-->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script th:src="@{assets/js/ie10-viewport-bug-workaround.js}"></script>
   
