--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,13 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/assets/css/dashboard.css}" rel="stylesheet">
 </head>
 <body>
 
-<h1 th:text="${route.duration}"></h1>
-<h1 th:text="${route.cost}"></h1>
-<tr th:each="writer,itrStat : ${writers}"  th:class="${itrStat.even}? 'even_css_class':'odd_css_class'" >
-    <td th:text="${#strings.startsWith(writer.location,'Hi')}? #{myblog.chief}">Name</td>
-</tr>
+<!--<h1 th:text="${route.duration}"></h1>-->
+<!--<h1 th:text="${route.cost}"></h1>-->
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="margin-left: 10%; width: 80%;">
+
+            <h2 class="sub-header" th:text="${route.duration}" style="text-align: center;"></h2>
+            <h2 class="sub-header" th:text="${route.cost}" style="text-align: center;"></h2>
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <tr th:each="writer,itrStat : ${writers}"  th:class="${itrStat.even}? 'even_css_class':'odd_css_class'" >
+                        <td th:text="${#strings.startsWith(writer.location,'Hi')}? #{myblog.chief}">Name</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Bootstrap core JavaScript
+   ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script th:src="@{assets/js/jquery.min.js}"><\/script>')</script>
+<script th:src="@{bootstrap/js/bootstrap.min.js}"></script>
+<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+<!--<script src="../../assets/js/vendor/holder.min.js"></script>-->
+<!--&lt;!&ndash; IE10 viewport hack for Surface/desktop Windows 8 bug &ndash;&gt;-->
+<!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
+
 </body>
 </html>
