--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -113,15 +113,15 @@
             <h1 class="cover-heading"></h1>
             <p class="lead">不能让贫穷限制了我们的出行选择</p>
             <p class="lead">
-              <a href="test" class="btn btn-lg btn-default">开启便利</a>
+              <a href="pretty" class="btn btn-lg btn-default">开启便利</a>
 
-                  <form method="post" th:action="@{/search}" th:object="${routeRequest}" target="_blank" id="searchform">
-                    <input type="text" th:field="*{startAddress}" class="form-control" placeholder="起点" required="" autofocus="">
-                    <input type="text" th:field="*{endAddress}" class="form-control" placeholder="终点" required="" autofocus="">
-                    <input type="text" th:field="*{expTime}" class="form-control" placeholder="预期时间(分钟)" required="" autofocus="">
-                    <!--<a href=" " class="btn btn-lg btn-default">开启便利</a>-->
-                    <button type="submit" id="search-submit" class="btn btn-lg btn-primary btn-block">查询</button>
-                    </form>
+                  <!--<form method="post" th:action="@{/search}" th:object="${routeRequest}" target="_blank" id="searchform">-->
+                    <!--<input type="text" th:field="*{startAddress}" class="form-control" placeholder="起点" required="" autofocus="">-->
+                    <!--<input type="text" th:field="*{endAddress}" class="form-control" placeholder="终点" required="" autofocus="">-->
+                    <!--<input type="text" th:field="*{expTime}" class="form-control" placeholder="预期时间(分钟)" required="" autofocus="">-->
+                    <!--&lt;!&ndash;<a href=" " class="btn btn-lg btn-default">开启便利</a>&ndash;&gt;-->
+                    <!--<button type="submit" id="search-submit" class="btn btn-lg btn-primary btn-block">查询</button>-->
+                    <!--</form>-->
               </p>
           </div>
 
