--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,7 +98,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">NotLastX</h3>
+              <h3 class="masthead-brand">贫民窟女孩出行宝</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
@@ -111,9 +111,9 @@
 
           <div class="inner cover">
             <h1 class="cover-heading"></h1>
-            <p class="lead">不能让贫穷限制了我们的出行选择</p>
+            <p class="lead">更快、更经济</p>
             <p class="lead">
-              <a href="pretty" class="btn btn-lg btn-default">开启便利</a>
+              <a href="pretty" class="btn btn-lg btn-default">一键安排</a>
 
                   <!--<form method="post" th:action="@{/search}" th:object="${routeRequest}" target="_blank" id="searchform">-->
                     <!--<input type="text" th:field="*{startAddress}" class="form-control" placeholder="起点" required="" autofocus="">-->
@@ -148,7 +148,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script th:src="@{assets/js/ie10-viewport-bug-workaround.js}"></script>
     <!--<script th:src="@{assets/js/geolocation.js}"></script>-->
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us"></script>-->
+    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY"></script>-->
     <!--<script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
     <!--<script>-->
@@ -248,6 +248,6 @@
         <!--};-->
 
     <!--</script>-->
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us&libraries=places&callback=initMap"-->
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY&libraries=places&callback=initMap"-->
             <!--async defer></script>-->
   </body></html>
