--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -65,7 +65,7 @@
     /*]]>*/
 </script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY&callback=initMap">
 </script>
 <!--<h1 th:text="${routes.duration}"></h1>-->
 <!--<h1 th:text="${routes.cost}"></h1>-->
