--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -199,7 +199,7 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script th:src="@{assets/js/ie10-viewport-bug-workaround.js}"></script>
 <!--<script th:src="@{assets/js/geolocation.js}"></script>-->
-<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us"></script>-->
+<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY"></script>-->
 <!--<script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
 <script th:src="@{/assets/js/classie.js}"></script>
@@ -326,7 +326,7 @@
     };
 
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us&libraries=places&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY&libraries=places&callback=initMap"
         async defer></script>
 <script>
     // $("#search-input-button").click(function(){
