--- a/src/main/resources/templates/pretty.html
+++ b/src/main/resources/templates/pretty.html
@@ -108,7 +108,7 @@
 
             <div class="masthead clearfix">
                 <div class="inner">
-                    <a href="#"><h3 class="masthead-brand" >NotLastX</h3></a>
+                    <a href="#"><h3 class="masthead-brand" >贫民窟女孩出行宝</h3></a>
                     <nav>
                         <ul class="nav masthead-nav">
                             <!--<li class="active"><a href="#">Home</a></li>-->
@@ -180,7 +180,7 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script th:src="@{assets/js/ie10-viewport-bug-workaround.js}"></script>
 <!--<script th:src="@{assets/js/geolocation.js}"></script>-->
-<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us"></script>-->
+<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY"></script>-->
 <!--<script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 
 <script>
@@ -300,7 +300,7 @@
     };
 
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrrIbD_sr2g6Li14JKQdyZe6y8KJ1S9us&libraries=places&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=ENTER_YOUR_KEY&libraries=places&callback=initMap"
         async defer></script>
 <script>
     $("#search-input-button").click(function(){
